--- a/data_processor/requirements.txt
+++ b/data_processor/requirements.txt
@@ -1,11 +1,51 @@
-certifi==2019.11.28
+asn1crypto==0.24.0
+awscli==1.16.113
+boto3==1.12.31
+botocore==1.15.31
+Brlapi==0.6.7
+certifi==2018.8.24
 chardet==3.0.4
-docutils==0.15.2
-idna==2.9
-jmespath==0.9.5
-pkg-resources==0.0.0
-python-dateutil==2.8.1
-requests==2.23.0
+colorama==0.3.7
+configobj==5.0.6
+cryptography==2.6.1
+distro==1.3.0
+distro-info==0.21
+docutils==0.14
+entrypoints==0.3
+Guake==3.4.0
+httplib2==0.11.3
+idna==2.6
+jmespath==0.9.4
+keyring==17.1.1
+keyrings.alt==3.1.1
+louis==3.8.0
+notify2==0.3
+olefile==0.46
+pbr==4.2.0
+pexpect==4.6.0
+Pillow==5.4.1
+psutil==5.5.1
+pyasn1==0.4.2
+pycairo==1.16.2
+pycrypto==2.6.1
+pycurl==7.43.0.2
+Pygments==2.3.1
+PyGObject==3.30.4
+PySimpleSOAP==1.16.2
+python-apt==1.8.4.1
+python-dateutil==2.7.3
+python-debian==0.1.35
+python-debianbts==2.8.2
+pyxdg==0.25
+PyYAML==3.13
+reportbug===7.5.3-deb10u1
+reportlab==3.5.13
+requests==2.21.0
+roman==2.0.0
+rsa==4.0
 s3transfer==0.3.3
-six==1.14.0
-urllib3==1.25.8
+SecretStorage==2.3.1
+six==1.12.0
+unattended-upgrades==0.1
+urllib3==1.24.1
+virtualenv==15.1.0
